--- a/index.html
+++ b/index.html
@@ -381,6 +381,12 @@
         }
 
         setInterval(criarParticula, 120);
+
+
+        //Inserir link
+        document.querySelector("button").addEventListener("click", () => {
+            window.open("https://google.com.br", "_blank");
+        });
     </script>
 
 </body>
