--- a/index.html
+++ b/index.html
@@ -340,7 +340,7 @@
     </main>
 
     <footer>
-        Desenvolvido por Ricardo — Curso de Natal IA - Super Geeks Sertãozinho
+        Desenvolvido por Ricardo Martins — Curso de Natal IA - Super Geeks Sertãozinho
     </footer>
 
     <!-- MODAL -->
@@ -385,7 +385,7 @@
 
         //Inserir link
         document.querySelector("button").addEventListener("click", () => {
-            window.open("https://google.com.br", "_blank");
+            window.open("https://gd.games/instant-builds/f7dfc211-984b-410c-a93d-c0ccb4c11393", "_blank");
         });
     </script>
 
