--- a/index.html
+++ b/index.html
@@ -7,6 +7,32 @@
     <title>A Caverna de Cristal</title>
 
     <style>
+        /* Modal */
+        .card-modal {
+            position: fixed;
+            inset: 0;
+            background: rgba(0, 0, 0, 0.85);
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            z-index: 9999;
+            cursor: pointer;
+        }
+
+        /* Imagem no modal */
+        .card-modal img {
+            max-width: 90%;
+            max-height: 90%;
+            object-fit: contain;
+            border-radius: 14px;
+            box-shadow: 0 0 30px rgba(255, 255, 255, 0.25);
+        }
+
+        /* Indica que é clicável */
+        .card {
+            cursor: pointer;
+        }
+
         * {
             margin: 0;
             padding: 0;
@@ -372,30 +398,32 @@
         }
 
         setInterval(criarParticula, 120);
+        document.querySelectorAll('.card').forEach(card => {
+            card.addEventListener('click', () => {
+                const img = card.querySelector('img')
+                if (!img) return
 
+                const modal = document.createElement('div')
+                modal.className = 'card-modal'
+
+                const modalImg = document.createElement('img')
+                modalImg.src = img.src
+                modalImg.alt = img.alt || ''
+
+                modal.appendChild(modalImg)
+                document.body.appendChild(modal)
+
+                // Fecha ao clicar
+                modal.addEventListener('click', () => {
+                    modal.remove()
+                })
+            })
+        })
 
         //Inserir link
         document.querySelector("button").addEventListener("click", () => {
             window.open("https://gd.games/instant-builds/f7dfc211-984b-410c-a93d-c0ccb4c11393", "_blank");
         });
-
-        function openModal(card) {
-            const img = card.querySelector('img')
-
-            const modal = document.createElement('div')
-            modal.className = 'modal'
-
-            const modalImg = document.createElement('img')
-            modalImg.src = img.src
-
-            modal.appendChild(modalImg)
-            document.body.appendChild(modal)
-
-            // Fecha ao clicar
-            modal.addEventListener('click', () => {
-                modal.remove()
-            })
-        }
     </script>
 
 </body>
